Fix player display on ios

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,13 @@ html {
   outline: 0;
 }
 
+video::-webkit-media-controls-panel,
+video::-webkit-media-controls-panel-container,
+video::-webkit-media-controls-start-playback-button {
+  display: none !important;
+  -webkit-appearance: none;
+}
+
 nav,
 main,
 footer {
